--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <title>Gearhead Social Club</title>
+  <title>Gearhead</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
@@ -22,7 +22,7 @@
         <span class="icon-bar"></span>
         </button>
       <div class="main-title navbar-brand">
-        <%= link_to "Gearhead Social Club", root_path %>
+        <%= link_to "Gearhead", root_path %>
       </div>
     </div>
       <!-- end navbar-header -->
@@ -70,7 +70,7 @@
   </div>
     <footer class="footer">
       <div>
-        <p class="text-muted">&copy; 2017 Gearhead Social Club</p>
+        <p class="text-muted">&copy; 2017 Gearhead </p>
       </div>
     </footer>
 
