--- a/app/views/static_pages/landing_page.html.erb
+++ b/app/views/static_pages/landing_page.html.erb
@@ -1,13 +1,9 @@
 <table>
 
  <div class="pad-top color-bg">
-	<h3>Welcome to Gearhead Social</h3>
+	<h3>Welcome to Gearhead</h3>
 </div>
 <%#p>Welcome! The date and time is <%= Time.now %>
-
-<div class="pad-top color-bg">
-	<h3>For fixed gear lovers</h3>
-</div>
 <div class="pad-bottom color-bg">
 <%= image_tag("bikelogo.png", class: "img-responsive my-image") %>
 </div>
