--- a/app/views/static_pages/_carousel.html.erb
+++ b/app/views/static_pages/_carousel.html.erb
@@ -2,7 +2,7 @@
 <!-- carousel -->
     <div class="container-fluid fill">
        <div class="pad-top">
-      <h2>New York's #1 Source for Fixed Gears</h2>
+      <h3>Products</h3>
     </div>
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 
