--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,7 +1,7 @@
 <table>
 
  <div class="pad-top color-bg">
-	<h3>Welcome to Gearhead</h3>
+	<h3>Welcome to Gearhead Bikes</h3>
 </div>
 <%#p>Welcome! The date and time is <%= Time.now %>
 <div class="pad-bottom color-bg">
