--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -6,5 +6,5 @@
 </div>
 <div class="pad-bottom-extra pad-bottom-double">
 
-<p>Gearhead Social Club promotes and encourages fixed gear bike riding in Manhattan.</p>
+<p>Gearhead Bikes promotes and encourages fixed gear bike riding in Manhattan.</p>
 </div>
