--- a/app/views/static_pages/_carousel.html.erb
+++ b/app/views/static_pages/_carousel.html.erb
@@ -8,11 +8,13 @@
 
         <!-- Indicators -->
 
-    <ol class="carousel-indicators">
-      <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-      <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-      <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-    </ol>        <!-- Wrapper for slides -->
+    <ol class="carousel-indicators hidden-xs">
+      <% @products.each_with_index do |product, index| %>
+      <li data-target="#carousel-example-generic" data-slide-to="<%=index%>" class=<%= " active" if index == 0 %>></li>
+        <% end %>
+    </ol>     
+
+    <!-- Wrapper for slides -->
 
         <div class="carousel-inner" role="listbox">
         <% @products.each do |product| %>
