--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    
+    <% @products.each do |product| %>
     <% cache product do %>
 
       <div class="col-md-4 col-sm-6 col-xs-12">
