--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,49 +1,46 @@
-<div class="container pad-top pad-bottom" >
-  <% cache @product do %>
-    <h2 class="text-center"><%= @product.name %></h2>
-  <% end %>
-  <div class="row margin-sides" data-product-id="<%= @product.id %>">
 
-<div class="col-lg-6 col-md-12 col-sm-12 pad-top">
-  <div class='inner-item img-responsive img-fluid'>
-    <div class="image img-zoom">
-      <%= image_tag(@product.image_url, class: "img-responsive img_zoom", data_zoom_image: @product.image_url) if @product.image_url %>
+<div class="container product-show-wrapper">
+  <div class="row" data-product-id="<%= @product.id %>">
+    <% if user_signed_in? && current_user.admin? %>
+      <div class="col-xs-12">
+        <%= link_to 'Edit', edit_product_path(@product) %> |
+        <%= link_to 'Back', products_path %> |
+        <%= link_to 'Destroy', @product, method: :delete, data: { confirm: 'Are you sure?' } %>
+      </div>
+    <% end %>
+
+  <div class="col-xs-12 col-sm-8 product-box">
+      <p>Views: <%= @product.views %></p>
+      <% cache @product do %>
+        <p class="product-name">
+        <%= @product.name %>
+        </p>
+        
+        <p class="product-description">
+          <%= @product.description %>
+        </p>
+        <p class="product-price col-xs-12">
+          <%= @product.price %> $
+        </p>
+        <p>Average Rating: <div id="average-rating" class="rated" data-score="<%= @product.average_rating %>"></div> </p>
+        
+        <%= form_tag "../payments/create" do %>
+          <%= hidden_field_tag(:product_id, @product.id) %>        
+          <%= render partial: "shared/stripe_checkout_button" %>
+        <% end %>
+      </div>
+      <div class="col-xs-12 col-sm-4">
+        <p class="product-image">
+          <%= image_tag(@product.image_url, class: "img-responsive image-zoom", data_zoom_image: @product.image_url) %>
+        </p>
+        <% end %>
     </div>
-  </div>
-</div>
-
-<div class="col-lg-6 col-md-12 col-sm-12 pad-top">
-  <h3 class=""><strong>Description: </strong><%= @product.description %></h3>
-  <h3 name="price_in_cents" class=""><strong>Price: </strong><%= number_to_currency@product.price * 0.01%>
-  </h3>
   
-  <p>
-    <% if user_signed_in? %>
-    <%= form_tag "/payments/create" do %>
-    <%= render partial: "shared/stripe_checkout_button" %>
-    <% end %>
-    <% end %>
-  </p>
-            
-  <p>Average Rating: <div class="rated" id=average-rating data-score="<%= @product.average_rating %>"></div> </p>
-  <p class="">
-    <% if signed_in? && current_user.admin? %>
-    <%= link_to 'Edit', edit_product_path(@product) %>
-    <% end %>
-    <%= link_to 'Back', products_path, class:'btn btn-default'%>
-  </p>
-
-</div>
+  </div>
+  <%= render "new_comment" %>
+  <div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
+  <%= render "comments" %>
   
-  <div class="col-lg-12 col-md-12 col-sm-12 pad-bottom pad-top">
-    <%= render 'new_comment', product: @product %>
-  </div>
-          
-  <div class="pagination">
-    <div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
-      <%= render 'comments', product: @product %>
-      <%= will_paginate @comments, :page_links => false %>
-  </div>
-
+</div>
       </div>
 </div>
