--- a/app/views/static_pages/_carousel.html.erb
+++ b/app/views/static_pages/_carousel.html.erb
@@ -7,12 +7,11 @@
       <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
 
         <!-- Indicators -->
-
-    <ol class="carousel-indicators hidden-xs">
-      <% @products.each_with_index do |product, index| %>
-      <li data-target="#carousel-example-generic" data-slide-to="<%=index%>" class=<%= " active" if index == 0 %>></li>
-        <% end %>
-    </ol>     
+<ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+  </ol> 
 
     <!-- Wrapper for slides -->
 
