--- a/app/views/static_pages/_carousel.html.erb
+++ b/app/views/static_pages/_carousel.html.erb
@@ -1,45 +1,37 @@
 
-<!-- carousel -->
-    <div class="container-fluid fill">
-       <div class="pad-top">
-      <h3>Products</h3>
-    </div>
-      <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+<h2>Featured Product:</h2>
 
-        <!-- Indicators -->
- <ol class="carousel-indicators">
-    <% counter = 0 %>
-    <% 3.times do %>
-      <li data-target="#carousel-example-generic" data-slide-to="<%= counter %>" <%= "class=active" if counter == 0 %>></li>
-      <% counter = counter + 1 %>
-    <% end %>
+<div class="header container-fluid">
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
   </ol>
 
+ <!-- Wrapper for slides -->
+<div class="carousel-inner" role="listbox">
+  <% @products.each do |product| %>
+  
+  <div class="item<%= " active" if product == @products.first %>" id="carus">
+    <%= image_tag(product.image_url) %>
+    <div class="carousel-caption">
+      <%= product.name %>
+    </div>
+  </div>
+ 
+  <% end %>
+ </div>
 
-    <!-- Wrapper for slides -->
-
-        <div class="carousel-inner" role="listbox">
-        <% @products.each do |product| %>
-          <div class="item<%= " active" if product == @products.first %>">
-          <div class='inner-item img-responsive img-fluid'>
-          <%= image_tag(product.image_url) %>
-            </div>
-            <div class="carousel-caption">
-              <h3><%= product.name %>
-              </h3>
-            </div>
-          </div>
-          <% end %>
-        </div>
-        <!-- Controls -->
-        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-          <span class="glyphicon glyphicon-chevron-left"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-          <span class="glyphicon glyphicon-chevron-right"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-    </div> 
-    <!--end carousel-->
+  <!-- Controls -->
+  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+</div>
