--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,6 +1,9 @@
-<table>
+<div class="pad-top">
+	<h1>Welcome to Gearhead Bikes</h1>
+</div>	
 
- <div class="pad-top color-bg">
+
+ <div class="pad-top">
 	<h3>Welcome to Gearhead Bikes</h3>
 </div>
 <%#p>Welcome! The date and time is <%= Time.now %>
@@ -8,10 +11,6 @@
 <%= image_tag("bikelogo.png", class: "img-responsive my-image") %>
 </div>
 
-<%= render partial: 'carousel' %>
-
-
-</table>
 <%# test_variable = 42 %>
 <%#= test_variable %>
 <%#= test_variable - 2 %>
