--- a/app/views/static_pages/_carousel.html.erb
+++ b/app/views/static_pages/_carousel.html.erb
@@ -9,7 +9,7 @@
 
         <ol class="carousel-indicators">
           <% @products.each_with_index do |product, index| %>
-          <li data-target="#carousel-example-generic" data-slide-to="<%=index%>" class=<%= " active" if index == 0 %>></li>
+          <li data-target="carousel-example-generic" data-slide-to="<%=index%>" class=<%= " active" if index == 0 %>></li>
           <% end %>
         </ol>
         <!-- Wrapper for slides -->
@@ -28,13 +28,13 @@
           <% end %>
         </div>
         <!-- Controls -->
-        <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+        <a class="left carousel-control" href="carousel-example-generic" role="button" data-slide="prev">
           <span class="glyphicon glyphicon-chevron-left">
           </span>
           <span class="sr-only">Previous
           </span>
         </a>
-        <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+        <a class="right carousel-control" href="carousel-example-generic" role="button" data-slide="next">
           <span class="glyphicon glyphicon-chevron-right">
           </span>
           <span class="sr-only">Next
