--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -10,6 +10,7 @@
     <% end %>
 
   <div class="col-xs-12 col-sm-8 product-box">
+  <p><strong>Views:</strong><%= @product.views %></p>
       <% cache @product do %>
         <p class="product-name">
         <%= @product.name %>
