fixed render products

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -3,7 +3,7 @@
 <h1>Products</h1>
 <div class="container product-box">
   <div class="row">
-    <%= render partial: 'product' %>
+    <%= render @products %>
   </div>
 </div>
 <br>
