--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,8 +1,5 @@
-<div class="container">
-  <div class="row">
-    <% cache product do %>
-
-      <div class="col-md-4 col-sm-6 col-xs-12">
+<% cache product do %>
+  <div class="col-xs-6 col-md-4">
         <h3><%= product.name %></h3>
          <%= if(product.image_url != nil && product.image_url != "" )
             link_to(image_tag(product.image_url, class: "img-responsive product-image"), product)
