--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,7 +1,6 @@
-<div class="col-xs-6 col-md-4">
-  <% cache product do %>
+<% cache product do %>
 
-<div class="col-xs-6 col-md-4">
+<div class="col-sm-6 col-md-4 col-lg-3">
   <h3><%= product.name %></h3>
     <%= if(product.image_url != nil && product.image_url != "" )
       link_to(image_tag(product.image_url, class: "img-responsive product-image"), product)
