--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,4 +1,6 @@
-<% cache product do %>
+<div class="container">
+  <div class="row">
+  <% cache product do %>
 
 <div class="col-sm-4 col-sm-4 col-sm-4">
   <h3><%= product.name %></h3>
