--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,6 +1,7 @@
-<div class="col-sm-4 col-sm-4 col-sm-4">
-  <div class="row">
-  <% cache product do %>
+<div class="row">
+  <table>
+    <% cache product do %>
+  </table>
 
 <div class="col-sm-4 col-sm-4 col-sm-4">
   <h3><%= product.name %></h3>
