product layout fix

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -221,6 +221,9 @@ a:hover {
         padding-top: 20px;
         text-align: center
     }
+    .table {
+        text-align: center
+    }
     .container {
         width: 90%
     }
