--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -222,7 +222,8 @@ a:hover {
         text-align: center
     }
     .table {
-        text-align: center
+        text-align: center;
+        margin: auto
     }
     .container {
         width: 90%
