--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,7 +1,5 @@
-<div class="centered">
-  <table>
+<div class="row">
     <% cache product do %>
-  </table>
 
 <div class="col-sm-4 col-sm-4 col-sm-4">
   <h3><%= product.name %></h3>
