--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,5 +1,6 @@
-<div class="row">
-    <% cache product do %>
+<div class="container">
+  <div class="row">
+<% cache product do %>
 
 <div class="col-sm-4 col-sm-4 col-sm-4">
   <h3><%= product.name %></h3>
