--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,5 +1,6 @@
 <div class="container">
   <div class="row">
+   <% @products.each do |product| %>
 <% cache product do %>
 
 <div class="col-sm-4 col-sm-4 col-sm-4">
@@ -20,6 +21,7 @@
         <% end %>
         </p>
       </div><!-- /col -->
+       <% end %>
     <% end %>
   </div>
 
