--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -3,7 +3,7 @@
    <% @products.each do |product| %>
 <% cache product do %>
 
-<div class="col-sm-4 col-sm-4 col-sm-4">
+<div class="col-md-4 col-sm-6 col-xs-12">
   <h3><%= product.name %></h3>
     <%= if(product.image_url != nil && product.image_url != "" )
       link_to(image_tag(product.image_url, class: "img-responsive product-image"), product)
