--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,4 +1,5 @@
-<div class="display-product">
+<div class="container">
+  <div class="row">
     <% cache product do %>
     
 <div class="col-md-4 col-sm-6 col-xs-12">
