--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -17,8 +17,9 @@ body {
 }
 .container {
     width: 80%;
-    margin: none;
+    margin: auto;
     padding: 8em 0
+
 }
 .container-fluid {
     width: 80%;
