--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -194,7 +194,8 @@ a:hover {
         padding-top: 20px
     }
     .container {
-        width: 80%
+        width: 80%;
+        margin: auto
     }
     #contact {
         padding-right: 10%;
