--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -143,11 +143,60 @@ h1 {
 }
 .row {
     text-align: center;
-    margin: auto
 }
 .text-muted {
     margin: 0 0 0 20px;
 }
+
+.product-show-wrapper {
+  background-color: white;
+  border: 2px solid #ececec;
+  box-shadow: 4px 4px 7px 0px #dddddd;
+  padding: 20px;
+}
+
+.product-box {
+  padding: 5px;
+}
+
+.product-description {
+  color: black;
+  padding: 10px;
+  font-family: 'Raleway', sans-serif;
+  font-style: bold;
+  min-height: 180px;
+}
+
+.product-image img{
+  max-height: 400px;
+}
+
+
+
+.product-item {
+  min-height: 800px;
+  background-color: #fff;
+  border: 2px solid #ececec;
+  box-shadow: 4px 4px 7px 0px #dddddd;
+  margin: 5px;
+  padding: 10px;
+}
+
+.product-name {
+  font-weight: bold;
+  color: #58e3b5;
+  font-family: 'Raleway', sans-serif;
+  font-size: 3em;
+  min-height: 100px;
+}
+
+.product-price {
+  text-align: center;
+  color: #ffc9c9;
+  font-size: 3em;
+  font-family: 'Raleway', sans-serif;
+}
+
 a:visited {
     color: #fff;
 }
