--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -19,10 +19,11 @@ body {
     width: 80%;
     padding: 8em 0
 
+
 }
 .container-fluid {
     width: 80%;
-    margin: none;
+    margin: auto;
 }
 h1,
 h2,
@@ -83,7 +84,7 @@ h1 {
 .my-image {
     display: block;
     margin: auto;
-    position: relative
+    position: center
 }
 .product-image {
     width: 150px;
@@ -157,6 +158,7 @@ h1 {
 
 .product-box {
   padding: 5px;
+  margin-bottom: auto;
 }
 
 .product-description {
