--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -195,7 +195,7 @@ h1 {
 .product-price {
   text-align: center;
   color: #ffc9c9;
-  font-size: 3em;
+  font-size: 2em;
   font-family: 'Raleway', sans-serif;
 }
 
@@ -274,7 +274,8 @@ a:hover {
         text-align: center
     }
     .container {
-        width: 90%
+        width: 90%;
+        margin: auto
     }
     #contact {
         padding-right: 5%;
