--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,153 +1,5 @@
 
 // Place all the styles related to the products controller here.
-* {
-    box-sizing: border-box
-}
-body,
-html {
-    height: 100%
-}
-body {
-    font-size: 10px;
-    font-family: 'Raleway', sans-serif;
-    padding: 0;
-    margin: 0;
-    padding-top: 79px;
-    position: relative;
-}
-.container {
-    width: 80%;
-    padding: 8em 0
-
-
-}
-.container-fluid {
-    width: 80%;
-    margin: auto;
-}
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    margin-top: 0;
-    margin-bottom: 0
-}
-h2 {
-    font-size: 4em;
-    font-weight: 700;
-    text-align: center;
-}
-h3 {
-    font-size: 2.5em;
-    font-weight: 200;
-    text-transform: uppercase;
-    text-align: center;
-}
-h4 {
-    font-size: 1em;
-    font-weight: 700;
-    line-height: 30px;
-    text-align: center
-}
-p {
-    font-size: 1.5em;
-    font-family: 'Raleway', sans-serif;
-    font-weight: 200;
-    line-height: 30px;
-    text-align: center
-}
-h1 {
-    font-weight: 700;
-    font-size: 4em;
-    font-family: 'Open Sans', sans-serif;
-    text-align: center;
-}
-.form-group {
-    font-size: 1em;
-    padding-top: 1em;
-    text-align: center
-}
-.pad-top {
-    padding-top: 4em
-}
-.pad-bottom {
-    padding-bottom: 4em
-}
-.pad-top-double {
-    padding-top: 8em
-}
-.pad-bottom-double {
-    padding-bottom: 8em
-}
-.my-image {
-    display: block;
-    margin: auto;
-    position: center
-}
-.product-image {
-    width: 150px;
-    position: relative;
-    margin: auto;
-}
-.pagination {
-    text-align: center;
-    padding: 0.3em;
-    cursor: default;
-}
-.pagination a,
-.pagination span,
-.pagination em {
-    padding: 0.2em 0.5em;
-}
-.pagination .disabled {
-    color: #aaaaaa;
-}
-.pagination .current {
-    font-style: normal;
-    font-weight: bold;
-    color: #ff0084;
-}
-.pagination a {
-    border: 1px solid #dddddd;
-    color: #B40431;
-    text-decoration: none;
-}
-.pagination a:hover,
-.pagination a:focus {
-    border-color: #B40431;
-    background: #B40431;
-    color: white;
-}
-.pagination .page_info {
-    color: #aaaaaa;
-    padding-top: 0.8em;
-}
-.pagination .previous_page,
-.pagination .next_page {
-    border-width: 2px;
-}
-.pagination .previous_page {
-    margin-right: 1em;
-}
-.pagination .next_page {
-    margin-left: 1em;
-}
-.glyphicon {
-    font-size: 0.5em;
-    text-align: center;
-    display: inline
-}
-.pagination a {
-    border: 0px
-}
-.row {
-    text-align: center;
-}
-.text-muted {
-    margin: 0 0 0 20px;
-}
 
 .product-show-wrapper {
   background-color: white;
@@ -158,7 +10,6 @@ h1 {
 
 .product-box {
   padding: 5px;
-  margin-bottom: auto;
 }
 
 .product-description {
@@ -167,6 +18,13 @@ h1 {
   font-family: 'Raleway', sans-serif;
   font-style: bold;
   min-height: 180px;
+}
+
+.product-color {
+  font-family: 'Raleway', sans-serif;
+  font-style: italic;
+  font-size: 1.8em;
+  padding: 10px;
 }
 
 .product-image img{
@@ -195,121 +53,42 @@ h1 {
 .product-price {
   text-align: center;
   color: #ffc9c9;
-  font-size: 2em;
+  font-size: 3em;
   font-family: 'Raleway', sans-serif;
 }
 
-a:visited {
-    color: #fff;
+.edit-product {
+  margin: 20px 0 0 0;
+  font-size: 1em;
+  text-align: center;
 }
-a:hover {
-    background-color: #fff;
+
+.edit-window {
+  background-color: #e7e7e7;
+  border: 1px solid #dddddd;
+  padding: 10px;
+  width: 795px;
 }
-.comments {
-    width: 100%;
-    background-color: #f5f5f5;
+
+.review-container {
+  display: none;
 }
-@media (min-width: 768px) and (max-width: 979px) {
-    body,
-    p {
-        text-align: center
-    }
-    h2 {
-        padding-top: 20px;
-        text-align: center
-    }
-    .header-caption {
-        top: 30%
-    }
-    .carousel-indicators {
-        top: 50%
-    }
-    .carousel-caption {
-        top: 40%
-    }
-    .inner-item img {
-        max-width: 150px;
-    }
+
+h4 a {
+  color: blue;
 }
-@media (max-width: 767px) {
-    body,
-    h3,
-    p {
-        text-align: center
-    }
-    h2 {
-        padding-top: 20px;
-        text-align: center
-    }
-    h1 {
-        padding-top: 20px
-    }
-    .container {
-        width: 80%;
-        margin: auto
-    }
-    #contact {
-        padding-right: 10%;
-        padding-left: 10%
-    }
-    .header-caption {
-        top: 30%;
-        font-size: 62.5%
-    }
-    .inner-item img {
-        max-width: 150px;
-    }
-    .carousel-caption {
-        top: 30%;
-    }
+
+h4 a:hover {
+  background-color: white;
+  color: blue;
 }
-@media (max-width: 480px) {
-    body,
-    h3,
-    p {
-        text-align: center
-    }
-    h2 {
-        padding-top: 20px;
-        text-align: center
-    }
-    .container {
-        width: 90%;
-        margin: auto
-    }
-    #contact {
-        padding-right: 5%;
-        padding-left: 5%
-    }
-    .header-caption {
-        top: 30%
-    }
-    .header-caption h2 {
-        font-weight: 800;
-        text-transform: uppercase
-    }
-    .carousel-caption {
-        top: 60%;
-    }
-    .about {
-        text-align: center;
-    }
-    #copywright {
-        width: 100%;
-        text-align: center
-    }
-    #fb-button {
-        width: 50%;
-        float: left
-    }
-    #twitter-button {
-        ;
-        float: right;
-        width: 50%;
-    }
-    .inner-item img {
-        width: 80%;
-    }
+
+.product-reviews {
+  padding: 20px;
+}
+
+.product-name a:hover {
+  text-decoration: none; 
 }
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
