--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,20 +1,24 @@
-<center><% cache product do %></center>
 <div class="col-xs-12 col-sm-6 col-md-3">
-  <div class="product-item"> 
-    <h3 class="product-name"><%= link_to product.name, product %><h3>
-    <%= link_to(image_tag(product.image_url, class: "img-circle img-responsive"), product) %>
-    <p class="product-description"><%= truncate(product.description, length: 150) %></p>
+  <div class="display-product">
+  <% cache product do %>
+    <% if product.image_url.present? %>
+      <%= link_to  image_tag(product.image_url, class: "img-responsive product-img"), product %>
+    <% end %>
+    <div class="product-description">
+      <p class="product-name"><%= product.name %></p>
+      <p>Description: <%= product.description %></p>
   
-    <hr>
-      
-    <div class="product-price"><%= product.price %></div>
-    <div class="col-xs-12 edit-product">
-      <% if user_signed_in? && current_user.admin? %>
-        <%= link_to 'Show', product %>
-        <%= link_to 'Edit', edit_product_path(product) %>
-        <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %>
+    </div>
+    <hr class="divider">
+    <p class="product-price">Price: <%= product.price %></p>
+
+    <div class="product-links">
+      <span><%= link_to 'Show', product %></span>
+      <% if current_user && current_user.admin? %>
+        <span><%= link_to 'Edit', edit_product_path(product) %></span>
+        <span><%= link_to 'Delete', product, method: :delete, data: { confirm: 'Are you sure?' } %></span>
       <% end %>
+    <% end %>
     </div>
   </div>
-</div>
-<% end %>
+</div> <!-- /col -->
