--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -10,7 +10,7 @@
             "No image."
           end %>
         <p><%= product.description %><br>
-        <%= product.price * 0.01 %><br></p>
+        <%= product.price %><br></p>
         <%= link_to 'Show', product, class:'btn btn-default'%>
         <p><% if signed_in? && current_user.admin? %>
            <%= link_to 'Edit', edit_product_path(product) %>
