average rating css style fix

--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -90,6 +90,11 @@ h1 {
     position: relative;
     margin: auto;
 }
+
+.product-reviews {
+  padding: 20px;
+}
+
 .pagination {
     text-align: center;
     padding: 0.3em;
@@ -244,14 +249,7 @@ a:hover {
         width: 100%;
         text-align: center
     }
-    #fb-button {
-        width: 50%;
-        float: left
-    }
-    #twitter-button {
-        ;
-        float: right;
-        width: 50%;
+    
     }
     .inner-item img {
         width: 80%;
